--- a/index.html
+++ b/index.html
@@ -71,6 +71,26 @@
     </div>
 </section>
 
+<section class="container">
+    <div class="card">
+        <img src="public/img/prop2.jpeg" alt="Property 1">
+    </div>
+    <div class="card">
+        <div>
+            <h2>Luxury Villa</h2>
+            <p>Experience the epitome of luxury</p>
+        </div>
+        <div>
+            <h2>Pool Villa</h2>
+            <p>Experience the epitome of luxury</p>
+        </div>
+        <div>
+            <h2>5 Star Hotel</h2>
+            <p>Experience the epitome of luxury</p>
+        </div>
+    </div>
+</section>
+
 <section class="imgContainer">
     <div class="imgCard">
         <img src="public/img/prop.avif" alt="Property 1">
