--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
         <div>
             <h2>5 Star Hotel</h2>
             <p>Experience the epitome of luxury</p>
+            <p>
+                Edit by DOME
+            </p>
         </div>
     </div>
 </section>
